Unknown bits and bobs

--- a/text/abbreviations.tex
+++ b/text/abbreviations.tex
@@ -20,6 +20,7 @@
 	\acro{1D}{one-dimension}
 	\acro{2D}{two-dimensions}
 	\acro{3D}{three-dimensions}
+	\acro{FDTD}{Finite Difference Time Domain}
 	\acro{HHG}{High Harmonic Generation}
 	\acro{QED}{Quantum Electro-Dynamics}
 	\acro{PIC}{Particle-In-Cell}
