--- a/text/ch2-zvp.tex
+++ b/text/ch2-zvp.tex
@@ -51,7 +51,9 @@ From equation \ref{eq:hamiltonian_specific} it is clear that should the vector p
 
 \textbf{**Must also discuss the impact of relativity in creating the observed phenomena, probably at energy scaling section?**}
 
-As the \ac{ZVP} mechanism is a relativistic phenomenon, it is essential to perform this analysis relativistically. Since all electrons are accelerated by the relativistic laser pulse to approximately speed $c$, surface electrons undergo similar trajectories and act collectively, oscillating in the laser pulse field. Consider first a transformation to the frame of reference where the laser pulse is normally incident to the plasma surface, this frame travels at velocity $\mathbf{v} = (c\sin\theta )\hat{\mathbf{y}}$ with electrons streaming at $-\mathbf{v}$. Using equation \ref{eq:zvp-energy_invariant} and $U = \gamma m_\mathrm{e} c^2$,
+As the \ac{ZVP} mechanism is a relativistic phenomenon, it is essential to perform this analysis relativistically. Since all electrons are accelerated by the relativistic laser pulse to approximately speed $c$, surface electrons undergo similar trajectories and act collectively, oscillating in the laser pulse field. Consider first a transformation to the frame of reference where the laser pulse is normally incident to the plasma surface, this frame travels at velocity $\mathbf{v} = (c\sin\theta )\hat{\mathbf{y}}$ with electrons streaming at $-\mathbf{v}$. 
+\textbf{**This needs adjusting for transverse momentum when there is an initial component that is non zero**}
+Using equation \ref{eq:zvp-energy_invariant} and $U = \gamma m_\mathrm{e} c^2$,
 \begin{equation}
 	\gamma^2 = 1 + a^2_0 + \left(\frac{p_\mathrm{prop}}{m_\mathrm{e}c}\right)^2,
 \end{equation}
@@ -156,12 +158,9 @@ One remaining consideration is we require that the zero gets through the whole e
 To summarise, for a sufficiently intense laser pulse, electrons on the radiated surface of a solid target are accelerated by the laser to relativistic velocities at a fraction of a laser pulse cycle and therefore electrons both follow similar trajectories and are able to respond adiabatically to the $\mathbf{J}\times \mathbf{B}$ force of the laser pulse. They form into a high charge density spatially thin coherent electron bunch on the front surface of the plasma but displaced inwards from the approximately immobile ions via the ponderomotive pressure of the laser. This charge separation generates a longitudinal electrostatic pseudocapacitor field that confines electrons to a potential well on the front surface of the plasma, preventing further propagation of the electron bunch into the plasma bulk. When the zero of the vector potential passes through the electron bunch, the ponderomotive pressure instantaneously vanishes and electrons are ejected specularly from the target, copropagating with the zeroes and gaining energy as they discharge the pseudocapacitor field. The electron bunch is then rotated by the laser pulse and launched into the bulk at high energy, as it does so emitting coherent synchrotron radiation in transmission and reflection.
 
 \subsection{ZVP electron bunch energies}\label{sec:zvp_energies_derivation}
-In \cite{baevaZeroVectorPotential2011}, Baeva \textit{et al} propose energy scalings for electron bunches produced in the \ac{ZVP} regime as a function of the incident laser pulse intensity and plasma density, finding that one of the key statements of similarity theory ($p \sim a_0 S^x$, where $x$ is some integer value, \textbf{THIS NEEDS A CITE I THINK IT APPEARS IN BAEVAS ORIGINAL HHG PAPER}) holds for the \ac{ZVP} mechanism. Later this was then extended to \ac{3D} by Savin \textit{et al} \cite{savinAttosecondscaleAbsorptionExtreme2017}. What follows is that discussion with a close consideration of the both consequences and constants of proportionality.
+In \cite{baevaZeroVectorPotential2011}, Baeva \textit{et al} propose energy scalings for electron bunches produced in the \ac{ZVP} regime as a function of the incident laser pulse intensity and plasma density, finding that one of the key statements of similarity theory ($p \sim a_0 S^x$, where $x$ is some integer value, \textbf{THIS NEEDS A CITE I THINK IT APPEARS IN BAEVAS ORIGINAL HHG PAPER}) holds for the \ac{ZVP} mechanism. Later this was then extended to \ac{3D} by Savin \textit{et al} \cite{savinAttosecondscaleAbsorptionExtreme2017}. What follows is that discussion with close consideration of both the consequences and constants of proportionality.
 
-
-(Pherhaps I should redo this discussion condering infinitessimal areas of the plasma surface to show how variation can exist across the surface) Defo do this! And say that provided the variation is small, rel to what though? the surface remains approximately flat -> that is totally not true
-
-Consider again the semi-infinite block of plasma proposed in figure \ref{fig:zvp_ablatingfront}, normally irradiated by a laser pulse with wavelength $\lambda_\mathrm{L}$ and peak electric field, $E_\mathrm{L}$. It is now the ponderomotive pressure of the laser that displaces the electron fluid. Consider ust one laser cycle. The electron surface moves inwards until the pressure exerted by the peak instantaneous ponderomotive pressure of the laser pulse cycle,
+Consider again the semi-infinite block of plasma presented in figure \ref{fig:introplasmafrequency}, normally irradiated by a laser pulse with wavelength $\lambda_\mathrm{L}$ and peak electric field, $E_\mathrm{L}$. It is now the ponderomotive pressure of the laser that displaces the electron fluid. The electron surface moves inwards until the pressure exerted by the peak instantaneous ponderomotive pressure of the laser pulse cycle,
 \begin{equation}
 	\mathbf{P}_\mathrm{L} = \epsilon_0 E^2_\mathrm{L} \hat{\mathbf{x}} = \epsilon_0 \left(\frac{a_0\omega_\mathrm{L}m_\mathrm{e}c}{e}\right)^2 \hat{\mathbf{x}}
 \end{equation}
@@ -169,7 +168,7 @@ is equal and opposite to the pressure exerted by the pseudo-capacitor field,
 \begin{equation}
 	\mathbf{P}_\mathrm{C} = \frac{QE}{\sigma} \hat{\mathbf{x}}= -\frac{(en_\mathrm{e}\Delta x)^2}{\epsilon_0}\hat{\mathbf{x}}
 \end{equation} 
-using equations \ref{eq:intro_Q} and \ref{eq:intro_E}. Equating the magnitudes of $\mathbf{P}_\mathrm{L}$ and $\mathbf{P}_\mathrm{C}$, the maximum displacement inwards of electrons is
+from equations \ref{eq:intro_Q} and \ref{eq:intro_E}. Equating the magnitudes of $\mathbf{P}_\mathrm{L}$ and $\mathbf{P}_\mathrm{C}$, the maximum displacement inwards of electrons is
 \begin{equation}\label{eq:zvp_dx}
 	\Delta x \hat{\mathbf{x}} = \frac{c}{\omega_\mathrm{L}}\frac{a_0}{\bar{n}_\mathrm{e}}\hat{\mathbf{x}}  = \frac{1}{kS}\hat{\mathbf{x}},
 \end{equation}
@@ -185,7 +184,7 @@ or an electron gamma factor,
 \begin{equation}
 	\gamma = \frac{1}{\sqrt{1-\beta^2}} = 1 + \frac{a_0^2}{2\bar{n}_\mathrm{e}}.
 \end{equation}
-Assuming all displaced electrons are captured by the pseudo-capacitor field and launched as a coherent bunch, the total number of electrons in the bunch is
+Assuming all displaced electrons are captured by the potential well and launched as a coherent bunch, the total number of electrons in the bunch is
 \begin{equation}\label{eq:zvp-Ne}
 	N_\mathrm{e} = n_\mathrm{e} \sigma \Delta x = \frac{\sigma a_0 n_\mathrm{c}}{k}  = \sigma \epsilon_0 E_\mathrm{L}
 \end{equation}
@@ -193,46 +192,45 @@ and hence, the total kinetic energy of the electron bunch is
 \begin{equation}\label{eq:zvp_U}
 	U_\mathrm{ZVP} = N_\mathrm{e} T = \frac{\sigma n_\mathrm{c}}{k}\times \frac{1}{2}m_\mathrm{e}c^2 \frac{a^3_0}{\bar{n}_\mathrm{e}}.
 \end{equation}
-It is now interesting to compare equation \ref{eq:zvp_U} to the laser energy deposited upon the plasma surface and therefore consider what fraction of the laser energy can be absorbed via the \ac{ZVP} mechanism. Using $E = E_\mathrm{L}$, \ref{eq:zvp_U} can be rewritten as
+It is now interesting to compare equation \ref{eq:zvp_U} to the laser energy deposited upon the plasma surface and therefore consider what fraction of the laser energy can be absorbed via the \ac{ZVP} mechanism. Using $E = E_\mathrm{L}$, equation \ref{eq:zvp_U} can be rewritten as
 \begin{equation}
 	U_\mathrm{ZVP} = \frac{1}{2\omega_\mathrm{L} S}\sigma c \epsilon_0 E^2_\mathrm{L}.
 \end{equation}
-For the case of normal incidence, bunches are produced at a frequency of $2\omega_\mathrm{L}$, naturally following the frequncy of the $\mathbf{J}\times \mathbf{B}$ force. Assuming a sinusoidal plane wave incident with surface area $\sigma$, the energy absorbed in half a laser cycle is
+For the case of normal incidence, bunches are produced at a frequency of $2\omega_\mathrm{L}$, naturally following the frequncy of the $\mathbf{J}\times \mathbf{B}$ force. Assuming a sinusoidal plane wave incident with surface area $\sigma$, the energy available during the pushing phase (a quarter cycle) is
 \begin{equation}
-	 U_\mathrm{L,1/2} = \sigma \frac{T}{2}\langle I_\mathrm{L}\rangle = \frac{2\pi}{4\omega_\mathrm{L}}\sigma c\epsilon_0E^2_\mathrm{L}.
+	 U_\mathrm{L,1/4} = \sigma \frac{T}{4}\langle I_\mathrm{L}\rangle = \frac{2\pi}{8\omega_\mathrm{L}}\sigma c\epsilon_0E^2_\mathrm{L}.
 \end{equation}
 Hence,
 \begin{equation}
-	\eta_\mathrm{ZVP} = \frac{U_\mathrm{ZVP}}{U_\mathrm{L,1/2}} = \frac{1}{\pi S}.
+	\eta_\mathrm{ZVP} = \frac{U_\mathrm{ZVP}}{U_\mathrm{L,1/2}} = \frac{2}{\pi S}.
 \end{equation}
 Interestingly, this new analytical result predicts the trend observed by A. Savin \cite{savinModellingLaserPlasmaInteractions2019} in \ac{PIC} simulations both in magnitude and in scaling. Indeed, A. Savin demonstrated 
 \begin{equation}
 	\eta_\mathrm{ZVP} \sim S^{-1.000(3)},
 \end{equation}
-however, this result led A. Savin to conclude increasing $S$ increases the energy in the reflected \ac{HHG} beam thus increasing high harmonic efficiency, seemingly in tension with the vast majority of the work on this regime [CITE CITE CITE]. The resolution arises from the follwoing: there are two distinct conversion efficiencies which describe the reflected harmonic spectrum: the conversion efficiency into the whole reflected beam and the conversion efficiency into individual harmonics. While the total conversion into the reflected beam decreases for decreasing $S$, the slope of the harmonic spectrum also decreases and therefore while A. Savin is absolutely correct, the imporant parameter (the slope of the harmonic spectra) follows the opposite trend.
+however, this result led A. Savin to conclude that increasing $S$ reduces absorption, increasing the energy in the reflected \ac{HHG} beam thus increasing high harmonic efficiency, seemingly in tension with the vast majority of the work on this process [CITE CITE CITE]. The resolution arises from awareness of two distinct conversion efficiencies that describe the reflected harmonic spectrum: the conversion efficiency into the whole reflected beam and the conversion efficiency for individual harmonics. While the total conversion into the reflected beam decreases for decreasing $S$, the slope of the harmonic spectrum also decreases, reducing \ac{HHG} efficiency. Indeed, high X-ray harmonic efficiency neccesitates high reflection inefficiencies due to the production of ZVP electron bunches as higher energy bunches produce more coherent reflected radiation, a caveat not often considered in the quest for higher-order harmonics. The impact of the ZVP mechanism on \ac{HHG} will be discussed in great detail in the following chapter.
 
-Indeed high X-ray harmonic efficiency neccesitates high inefficiencies in the production of ZVP electron bunches as higher energy bunches produce more coherent reflected radiation, a caveat not often considered in the quest for higher-order harmonics.
-
-
-[Side note for my reference: bunch is made and at peak compression at peak of laser pulse. then laser field oscillates,inside the bunch they experience an a0 = 0(? maybe) outside there is a minimum in the field, then the bunch is rotated back when it hits the next peak of the laser pulse (ie a0=0? outside plasma?) the upshot of this is I can then say there is a distance of lambda/2 between bunch peak displacement and radiation point and since peak displacement = 1/kS, for all S, the pseudocapacitor has been completely discharged and therefore there has been the maximum energy gain before HHG production - important for electron bunch gamma factor discusion.]
-
-
-Next up: the unification of RES and ZVP.
+The expressions for energies in equations \ref{eq:zvp_T} and \ref{eq:zvp_U} require the electron bunch to fully discharge the pseudo-capacitor before interaction with the subsequent laser pulse peak. Since the electron bunch travels at speed $\approx c$, the peak displacement (and thus the pseudo-capacitor width) must satisfy
+\begin{equation}\label{eq:zvp-deltax_condition}
+	\Delta x \le \frac{\lambda}{8}.
+\end{equation}
+Using equation \ref{eq:zvp_dx}, it is clear equation \ref{eq:zvp-deltax_condition} is satisfied for $ S\ge 1.3$.
 
 \subsection{ZVP bunches oblique incidence scaling and internal bunch structure}
-This section is inspired by \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011} and \cite{vincentiOpticalPropertiesRelativistic2014} supplementary material but different where I believe they have gone wrong to generalise the \ac{ZVP} mechanism energy scalings.
+This section is inspired by ideas from the work of Gonoskov \textit{et al} \cite{gonoskovUltrarelativisticNanoplasmonicsRoute2011} and VIncenti \textit{et al} \cite{vincentiOpticalPropertiesRelativistic2014} to extend the theory of the ZVP mechanism for energy absoption to the more practical\footnote{Not only is this more feasible in experiment but has been shown to optimise HHG.\textbf{CITE}} case of oblique incidence. 
 
-The below section needs cleaning up of minus signs etc, take the convention laser propagates in the positive direction therefore drift of electrons and ions in frame with normal incidence is in negative direction.
 
-As has previously been stated, if the plasma-vacuum boundary is sufficiently steep, the plasma electrons will respond adiabatically to the laser pulse and arrange themselves to form a pseudocapacitor longitudinal electric field $E_\mathrm{C}$ at the plasma surface. At all points in this adiabatic phase, the surface electrons will be in a quasi-static equilibrium \textit{i.e.} there will be a balance between the electromagnetic forces on them. Consider again a laser pulse incident on a solid density plasma existing for $x>0$ at angle $\theta$. Transforming to the reference frame where the laser is incident normally (quantities in this frame are indicated by the primed symbol), the electron and ion bulk plasma species are now streaming with a velocity $\mathbf{v}_\mathrm{d} = -c \sin\theta \hat{\mathbf{y}}$.  From the Lorentz force law along the longitudinal direction ($\hat{\mathbf{x}}$), for a displacement of the electron fluid $x'_\mathrm{e}$ (one assumes that the expression for a single electron at the surface describes the surface as via relativity all electrons follow similar trajectories), travelling at speed $\mathbf{v'}$
+\textbf{**The below section needs cleaning up of minus signs etc, take the convention laser propagates in the positive direction therefore drift of electrons and ions in frame with normal incidence is in negative direction.**}
+
+Provided the plasma-vacuum boundary is sufficiently steep, the plasma electrons will respond adiabatically to the laser pulse and arrange themselves to form a pseudocapacitor longitudinal electric field $E_\mathrm{C}$ at the plasma surface. At all points in this adiabatic `pushing' phase, the surface electrons will be in a quasi-static equilibrium \textit{i.e.} there will be a balance between the electromagnetic forces on them. Consider again the laser pulse incident on a solid density plasma existing for $x>0$ at angle $\theta$. Transforming to the frame of reference in which the laser is normally incident (quantities in this frame are indicated by the primed symbol), the electron and ion bulk plasma species stream at velocity $\mathbf{v}_\mathrm{d} = -c \sin\theta \hat{\mathbf{y}}$.  Applying the Lorentz force law along the longitudinal direction ($\hat{\mathbf{x}}$), for a displacement of the electron fluid $x'_\mathrm{e}$ (one assumes that the expression for a single electron at the surface describes the surface since all electrons follow similar trajectories), travelling at speed $\mathbf{v'}$,
 \begin{equation}\label{eq:zvp_eq}
 	-e(\mathbf{v'}(x'_\mathrm{e})\times (\mathbf{B}'_\mathrm{L}(x'_\mathrm{e}) + \mathbf{B}'_\mathrm{i}(x'_\mathrm{e}))\cdot \hat{\mathbf{x}} + E'_\mathrm{C}(x'_\mathrm{e}) )= 0,
 \end{equation}
-where 
+where the laser magnetic field,
 \begin{equation}\label{eq:zvp_Bl}
 	B'_\mathrm{L} = \frac{m_\mathrm{e} \omega'_\mathrm{L}a_0\sin(\omega'_\mathrm{L}t'-k'x'_\mathrm{e})}{e} \hat{\mathbf{z}}
 \end{equation}
-and $B_\mathrm{i}$ originates from the uncompensated ion current, $\mathbf{J_\mathrm{i}} =  Zen'_\mathrm{i}(x'_\mathrm{e}) \mathbf{v}_\mathrm{d}$, where the electron fluid has been displaced. As before, from equation \ref{eq:intro_E},
+and $B_\mathrm{i}$ is the magnetic field generated by the uncompensated ion current, $\mathbf{J_\mathrm{i}} =  Zen'_\mathrm{i}(x'_\mathrm{e}) \mathbf{v}_\mathrm{d}$, where the electron fluid has been displaced. As before, from equation \ref{eq:intro_E},
 \begin{equation}\label{eq:zvp_Ec}
 	E'_\mathrm{C} = \frac{en'_\mathrm{e}x'_\mathrm{e}}{\epsilon_0}.
 \end{equation}
@@ -331,41 +329,80 @@ ponderomotvie + ZVP which at most would be twice the predicted gamma which is qu
 Earlier write something along the lines of explaining while ZVP absorption does represent laser energy absorption, bulk heating occurs rather indirectly.
 
 \section{Defining characteristics of the ZVP mechanism}
-In her original paper, T. Baeva \textit{et al} \cite{baevaZeroVectorPotential2011} outlined 6 defining characteristics of the \ac{ZVP} mechanism, namely,
+In the original paper on the ZVP mechanism, T. Baeva \textit{et al} \cite{baevaZeroVectorPotential2011} outlined 6 defining characteristics of the \ac{ZVP} mechanism, namely,
 \begin{enumerate}
 	\item The existance of vector potential zeros moving through the skin layer in the laboratory frame;
 	\item The existance of zeroes in the incident laser pulse vector potential required for the formation of fast electron bunches;
 	\item The generation of fast electron bunches with ultra-short temporal duration;
-	\item Such bunches should be described by the expressions for average \ref{eq:zvp_Tzvp_theta} and total energy \ref{eq:zvp_Uzvp_theta};
-	\item An intrinsic link must exist between the fast electron bunches and coherent X-ray \ac{HHG};
-	\item Injection of the fast electron bunches along the propagation axis of the laser pulse;
+	\item That such fast electron bunches follow the energy scalingings of equations \ref{eq:zvp_Tzvp} and total energy \ref{eq:zvp_Uzvp};
+	\item Injection of the fast electron bunches is along the propagation axis of the laser pulse;
+	\item There must be an intrinsic link must exist between the fast electron bunches and coherent X-ray \ac{HHG};
 \end{enumerate}
-with the essential point being it is the moving zeros within the skin layer being the defining delineator between this post-ponderomotive regime of laser pulse energy absorption and all other proposed mechanisms. While such observational requirements are far beyond the reaches of currently experimental know-how, numerical simulations in both 1- \cite{baevaZeroVectorPotential2011} and 2-dimensions \cite{savinAttosecondscaleAbsorptionExtreme2017} have confirmed the above points. Now is presented the first \ac{3D} simulations to demonstrate the \ac{ZVP} mechanism.
+with the moving zeros within the skin layer being the defining delineator between this post-ponderomotive regime of laser pulse energy absorption and all other proposed mechanisms. While such observational requirements are far beyond the reaches of currently experimental know-how, numerical simulations in both 1- \cite{baevaZeroVectorPotential2011} and 2-dimensions \cite{savinAttosecondscaleAbsorptionExtreme2017} have confirmed the above points. Now is presented the first \ac{3D} simulations attempting to demonstrate these criteria.
 
 \section{Numerical simulations of the ZVP mechanism}
-This thesis relies throughout on the analysis of 1,2 and 3D \ac{PIC} simulations, primarily using the massively-parallel and open-source simulation code Smilei \cite{derouillatSmileiCollaborativeOpensource2018}. Simulation parameters will be provided throughout.
-\subsection{The ZVP mechanism in 3D}
-Results are presented in figure \ref{fig:zvp3d}.
-
-Discuss choice of S parameter somewhere. Also note that these parameters are currently accessible on ELI-NP.
-
+This thesis relies on the analysis of 1,2 and 3D \ac{PIC} simulations, primarily using the massively-parallel and open-source simulation code Smilei \cite{derouillatSmileiCollaborativeOpensource2018}. Simulation parameters will be provided throughout.
+\textbf{**Discuss choice of S parameter somewhere. Also note that these parameters are currently accessible on ELI-NP.**}
+\subsection{The ZVP mechanism in 3D3V}
+The 3D simulation results are presented in figure \ref{fig:zvp3d} alongside comparison to an equivalent 2D simulation.
 \begin{figure}
 	\centering
 	\includegraphics[width=1\linewidth]{figures/zvp/zvp_3D}
 	\caption[Simulation results from a 3D \ac{PIC} simulation of the \ac{ZVP} mechanism. ]{Simulation results from a 3D \ac{PIC} simulation of the \ac{ZVP} mechanism. a) The initialised electron number density. b) The electron number density several cycles later, the plasma bulk is intact, however there is evidence of instabilities and electron bunches propagating through and around the plasma. c) The electron kinetic energy density at the same timestep. Note that the scale has been clipped to enable observation of both electron bunches propagating through and around the plasma bulk. Significantly higher energy density, corresponding to a higher charge density and attosecond duration for the electron bunches propagating around the bulk. d-f) Plots clipped through $z=0$ for a-c) respectively for better clarity on the internal structure of the plasma bulk. The accompanying plots for figures e) and f) are corresponding 2D PIC simulation results.}
 	\label{fig:zvp3d}
 \end{figure}
-I will finish this section once the results of the rest of the 3D sim stuff is done. One thing to remark:
+Simulation parameters in table \ref{tab:parameters}, such parameters are compatible with the 10 PW ELI-NP state-of-the-art laser facility \cite{tanakaCurrentStatusHighlights2020}.
+\begin{table}[]
+	\begin{center}
+	\begin{tabular}{lll}
+		\hline \hline
+		\multicolumn{3}{c}{Laser (3D, normal incidence)}   \\
+		Parameters                                        & Real                                 & Sim                         \\ \hline
+		Wavelength, $\lambda$ (nm)                        & 1060                                 & 2$\pi$                      \\
+		Angular frequency, $\omega_\mathrm{L}$ (fs$^{-1}$)         & 1.8                                  & 1                           \\
+		Beam waist, $L_0$ (nm)                            & 6$\lambda$                           & 12$\pi$                     \\
+		Focal point, ($f_x$, $f_y$, $f_z$) (nm)                  & (0.5$\lambda$, 5$\lambda$, $0.5\lambda$)             & ($\pi$, 10$\pi$, $\pi$)           \vspace{0.25cm}\\ 
+		Spatial envelope, $E_i$, $i = y,z$                           & \multicolumn{2}{l}{$E_i \sim e^{-(i-f_i)^2/L_0^2}$}                \\
+		Temporal envelope, $E_t$                          & \multicolumn{2}{l}{$E_t \sim e^{-(t-4\lambda/c)^2/(4\lambda/3c)^2}$} \vspace{0.15cm}\\ \hline \hline
+		\multicolumn{3}{c}{Simulation box}   \\ \hline
+		Size, $x \times y\times z$ (nm)                           & $2\lambda \times 9\lambda \times \lambda$          & $4\pi \times 18\pi \times 2\pi$         \\
+		Sim length (fs)                                   & 35.22                                & 20$\pi$                     \\
+		Spatial resolution, $\Delta x$ (nm)               & $\lambda/128$ = 8.28                 & 0.0491                      \\
+		Temporal resolution, $\Delta t$ (as)              & $\Delta x/11c$ = 2.51               & 0.00446                   \vspace{0.15cm}  \\ \hline \hline
+		\multicolumn{3}{c}{Collisionless, pre-ionised randomly-initialised aluminium plasma}                                               \\ \hline
+		Electron $x$ profile, $n(x)$                             & \multicolumn{2}{l}{$\begin{cases}
+				n_\mathrm{e} \text{ for $2\lambda \le x \le 3\lambda$,}\\
+				n_\mathrm{e}e^{(x-2\lambda)/0.2\lambda} \\
+				\text{\hspace{0.5cm}for $x \le 2\lambda$.}\\
+			\end{cases}$}                                               \\
+		Electron $y$ profile, $n(y)$                              & \multicolumn{2}{l}{$\begin{cases}
+				1 \text{ for $2\lambda \le y \le 8\lambda$,}\\
+				0 \text{ otherwise.}\\
+			\end{cases}$}                                               \\
+		Electron $z$ profile, $n(z)$                              & \multicolumn{2}{l}{$\begin{cases}
+		1 \text{ for $0.125\lambda \le y \le 0.875\lambda$,}\\
+		0 \text{ otherwise.}\\
+	\end{cases}$}                                               \\
+		Ion profile, $n_\mathrm{i}(x,y,z)$                                & \multicolumn{2}{l}{$n_\mathrm{i} = n(x)n(y)n(z)/13$}                                                    \\
+		Macro-electrons per cell                       & \multicolumn{2}{l}{729}                                                               \\
+		Macro-ions per cell                               & 8                                   &  \\
+		Ion temperature, $T_\mathrm{i}$ (keV)              &     0             &  0                         \\
+		Electron temperature, $T_\mathrm{e}$ (keV)              &     10             &  0.02                          \\ \hline \hline
+		\multicolumn{3}{c}{Stability criteria}                                               \\ \hline
+		$\lambda_\mathrm{D}/\Delta x$                               &0.288                                   &  \\
+		$1/\Delta t \omega_\mathrm{p}$                             &24.4                                   &  \\
+		Macro-particles in the Debye sphere                    &210                                  &  \vspace{0.15cm}\\ \hline \hline 
 
-The remarkable similarity between the 2 and 3D simulation results is a natural consequence of the 2D nature of the interaction geometry. It is however still reassuring to note that previous work withstands this stringent test of the real universe. 
+	\end{tabular}
+	\end{center}
+	\caption{\label{tab:parameters} \textbf{Simulation parameters in both real and normalised Smilei simulation units for the 3D3V simulations.} }
+\end{table}
+Figure \ref{fig:zvp3d}c) clearly demonstrates the existence of high energy density electron bunches propagating through the plasma bulk in the direction of the laser pulse. Note that this ZVP criterion is required by conservation of transverse momentum inside the plasma bulk where the laser fields cannot propagate. Figure \ref{fig:zvp3d}b) shows these bunches escape to the rear of the bulk but lose energy as they do so. Looking now at figure \ref{fig:zvp3d}e) and the internal structure of the plasma bulk. These bunches drive two-stream and filamentation instabilities \cite{bretMultidimensionalElectronBeamplasma2010}. The bulk propagating bunches are accompanied by higher density electron buches to either side of the plasma block with the side switching every half laser pulse cycle. 
 
-(At some point list all the other sources of potential error, including ignoring ionisation, ionisation states, collisions.)
-
-Interesting result of the 3D sim: Can see bunch on front surface and laser clearly propagating behind it. Is this since in this new regime (ZVP dominating HHG) the thin bunch barely attenuates (ie reflects) the laser pulse when it is accelerating across the pseudo capacitor, hence the laser is still effectively able to compress the plasma surface and keep the process going. Meanwhile the reflected HHG light comes mostly from converting bunch KE into HHG.
-
+The plasma specifications were chosen to minimise computational load while ensuring numerical convergence, requiring over 100 billion macroparticles. The electron temperature is raised significantly higher than that which would be expected in such a laser-plasma system so as to resolve the Debye length. Anticipated plasma temperatures are calculated using 1D HYADES simulations in the following chapter. While this temperature is unphysical and will lead to some small plasma expansion over course of the simulation, the temperature remains negligible compared to that imparted to the electron bunches by the laser pulse. The striking similarity between the 2 and 3D simulation results is a natural consequence of the 2D nature of the interaction geometry. It is however still reassuring to note that previous work withstands the stringent test of the real universe geometry and not lost in the chaos.
 
 \subsubsection{Convergence of 3D simulations}
-The 3D simulation parameters were chosen to be consistent with previous work on the \ac{ZVP} mechanism, however, such simulations are cumbersome, limiting the number of simulations it is feasible to run. Certainly parameter scans are not currently available. In order to query the defining characteristics outlined by Baeva, a smaller simulation was run with similar parameters to the initial simulation (this is 9/18compare) but at lower resolution. 
+The 3D simulation parameters were chosen to be consistent with previous work on the \ac{ZVP} mechanism, however, such simulations are cumbersome, limiting the number of simulations it is feasible to run. In order to query the defining characteristics outlined by Baeva, a lower resolution simulation was performed with similar parameters to the initial simulation.
 % TODO: \usepackage{graphicx} required
 \begin{figure}
 	\centering
@@ -376,11 +413,12 @@ The 3D simulation parameters were chosen to be consistent with previous work on 
 The two simulations are compared in figure \ref{fig:zvp3dcomparelowres}. Good convergence is qualitatively demonstrated by the presence of characteristic features of the ZVP mechanism. While the instabilities are similar in structure, the change in seeding changes their exact positions. As instabilities are not the focus of this thesis this variation is of no concern.
 
 
-Maybe mention somewhere that I would als add pseudocapacitor field as an essential characteristic of the ZVP mechanism that should generally be identified.
+
+
 
 Following the success in reproducing the key features of the \ac{ZVP} mechanism and demonstrated consistency between 2 and 3D equivalent simulations, the remainder of this chapter will predominantly utilise 2D simulations to interrogate the mechanism further.
 \subsection{The ZVP electron bunch}
- Although much has been stated of the high energy and short duration of ZVP electron bunches in the previous work, until now much of the quantitative discussion of the properties of such bunches has avoided interrogation. A ZVP electron bunch is an electron bunch produced via the ZVP mechanism. Once produced and accelerated across the pseudocapacitor field, it is launched back in the laser propagation direction. While the bunch has no spatial separation over energies when propagating with the zero of the vector potential, the turning point of the electrons is longitudinal momentum dependent due to the Coulomb attraction of the ions after overshooting the pseudocapacitor field. Baeva \textit{et al} showed that the electron bunch has a quasi-monoenergetic spectrum: there is a one-to-one relationship between energy and position with the higher energies trailing the lower energies. The full bunch is confined to 130 as while a single energy confined to 5 as. If, however, the plasma bulk is transversely mass-limited relative to the laser spot size,when rotated back towards the plasma block, some of the electron bunch will overshoot and escape the potential well without significant stretching of the bunch in time as can be seen in figure \ref{fig:zvp3d}. Such electron bunches (retain the initial energy spread???? ie fast first as disucssed in RES paper) retain their high charge density and ultra-short duration. ZVP electron bunches can therefore be placed into two categories: ultra-high charge, ultra-short duraction electron bunches from mass-limited targets, hereafter labelled mass-limited electron bunches, of interest due to their unique properties and bulk propagating bunches, hereafter labelled bulk bunches, which have lower charge densities, are imprinted with instabilities and are instead of interest due to their connection to energy absorption and reflection in this post-ponderomotive regime.
+ Previous work on the ZVP mechanism has highlighted the high energ and short duration of electron bunches, however, until now much of the quantitative discussion of the properties of such bunches has avoided interrogation. A ZVP electron bunch is an electron bunch produced via the ZVP mechanism. Once produced and accelerated across the pseudocapacitor field, it is launched back in the laser propagation direction. While the bunch has no spatial separation over energies when propagating with the zero of the vector potential, the turning point of the electrons is longitudinal momentum dependent due to the Coulomb attraction of the ions after overshooting the pseudocapacitor field. Baeva \textit{et al} showed that the electron bunch has a quasi-monoenergetic spectrum: there is a one-to-one relationship between energy and position with the higher energies trailing the lower energies. The full bunch is confined to 130 as while a single energy confined to 5 as. If, however, the plasma bulk is transversely mass-limited relative to the laser spot size,when rotated back towards the plasma block, some of the electron bunch will overshoot and escape the potential well without significant stretching of the bunch in time as can be seen in figure \ref{fig:zvp3d}. Such electron bunches (retain the initial energy spread???? ie fast first as disucssed in RES paper) retain their high charge density and ultra-short duration. ZVP electron bunches can therefore be placed into two categories: ultra-high charge, ultra-short duraction electron bunches from mass-limited targets, hereafter labelled mass-limited electron bunches, of interest due to their unique properties and bulk propagating bunches, hereafter labelled bulk bunches, which have lower charge densities, are imprinted with instabilities and are instead of interest due to their connection to energy absorption and reflection in this post-ponderomotive regime.
  
  To investigate these two bunch types further, 2D PIC simulations were performed, see appendix for parameters. Figure blah is reprentative.
  
