--- a/text/ch2-zvp.tex
+++ b/text/ch2-zvp.tex
@@ -391,6 +391,7 @@ Simulation parameters in table \ref{tab:parameters}, such parameters are compati
 		\multicolumn{3}{c}{Stability criteria}                                               \\ \hline
 		$\lambda_\mathrm{D}/\Delta x$                               &0.288                                   &  \\
 		$1/\Delta t \omega_\mathrm{p}$                             &24.4                                   &  \\
+		$\Delta x/c\Delta t$                             &   11                               &  \\
 		Macro-particles in the Debye sphere                    &210                                  &  \vspace{0.15cm}\\ \hline \hline 
 
 	\end{tabular}
@@ -410,11 +411,7 @@ The 3D simulation parameters were chosen to be consistent with previous work on 
 	\caption[Comparison between the initial 3D simulation and a lower resolution version.]{Comparison between the initial 3D simulation and a lower resolution version. a) Electron number density. b) Kinetic energy density. c) and d) are slices of a) and b) respectively. $i$) Initial simulation. $ii$) Lower resolution simulation. Good convergence is demonstrated.}
 	\label{fig:zvp3dcomparelowres}
 \end{figure}
-The two simulations are compared in figure \ref{fig:zvp3dcomparelowres}. Good convergence is qualitatively demonstrated by the presence of characteristic features of the ZVP mechanism. While the instabilities are similar in structure, the change in seeding changes their exact positions. As instabilities are not the focus of this thesis this variation is of no concern.
-
-
-
-
+The two simulations are compared in figure \ref{fig:zvp3dcomparelowres}. Good convergence is qualitatively demonstrated by the presence of characteristic features of the ZVP mechanism. While the instabilities are similar in structure, the change in seeding changes their exact positions. As instabilities are not the focus of this thesis this variation is of no concern. Note that while general characteristics remain similar, some caution is advisable when considering quantitative results.
 
 Following the success in reproducing the key features of the \ac{ZVP} mechanism and demonstrated consistency between 2 and 3D equivalent simulations, the remainder of this chapter will predominantly utilise 2D simulations to interrogate the mechanism further.
 \subsection{The ZVP electron bunch}
